# fitsuite

deployment/local/: down.sh  up.sh
deployment/local/project/: docker-compose.yml
fitsuite/: Makefile  pyproject.toml
ui/: package-lock.json  package.json
ui/api/: analyticsService.ts  bookingService.ts  membershipService.ts  securityService.ts  userService.ts
ui/app/: layout.tsx  providers.tsx
ui/app/admin/: page.tsx
ui/app/admin/analytics/: page.tsx
ui/app/admin/bookings/: page.tsx
ui/app/admin/content/: page.tsx
ui/app/admin/memberships/: page.tsx
ui/components/analytics/: date-range-picker.tsx  export-button.tsx  stat-summary.tsx
ui/components/bookings/: booking-calendar.tsx  booking-list.tsx  form-modal.tsx  resource-management.tsx  stat-card.tsx
ui/components/content/: language-switcher.tsx  media-grid.tsx  news-form.tsx  notification-form.tsx  rich-text-editor.tsx  tournament-form.tsx
ui/components/layout/: admin-layout.tsx  page-container.tsx  sidebar.tsx  top-bar.tsx
ui/components/memberships/: action-buttons.tsx  assign-membership-form.tsx  attendance-tracker.tsx  chart-card.tsx  client-membership-table.tsx  membership-card.tsx
ui/components/security/: action-log-table.tsx  data-protection-status.tsx  role-manager.tsx  status-card.tsx
ui/components/users/: filter-panel.tsx  user-card.tsx  user-table.tsx
ui/lib/: utils.ts
ui/store/: index.ts
ui/store/slices/: analyticsSlice.ts  bookingSlice.ts  membershipSlice.ts  securitySlice.ts  userSlice.ts
ui/types/: analytics.ts  booking.ts  membership.ts  security.ts  user.ts
(+2 files in other folders)
