[project]
name = "fitsuite"
version = "0.1.0"
description = ""
authors = [
    {name = "bl1nkker",email = "nurovich14@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "cleo (>=2.1.0,<3.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "structlog (>=25.3.0,<26.0.0)",
    "asgi-correlation-id (>=4.3.4,<5.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "shortuuid (>=1.0.13,<2.0.0)"
]

[tool.poetry]
packages = [{include = "fitsuite", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
